[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
layman = "src"

[tool.setuptools.package-data]
layman = ["config.toml"]

[project]
name = "layman"
version = "0.1.0"
description = "A daemon that handles sway/i3 layout management on a per-workspace basis"
readme = "README.md"
license = {text = "GPL v3"}
dependencies = [
    "i3ipc",
    "setproctitle",
    "tomli",
]

[project.scripts]
layman = "layman.__main__:main"
